# ALC-Planner

./: .clangd  CMakeLists.txt  README.md  package.xml
docs/: planner.md
include/alc_planner/: bnb_selector.hpp  candidate_builder.hpp  map_utils.hpp  planner_node.hpp  reward_evaluator.hpp  saliency_evaluator.hpp  slam_graph_planner.hpp  trigger_policy.hpp  types.hpp  uncertainty_metrics.hpp
include/nlohmann/: json.hpp
launch/: alc_planner.launch.py
src/core/: bnb_selector.cpp  candidate_builder.cpp  map_utils.cpp  reward_evaluator.cpp  saliency_evaluator.cpp  slam_graph_planner.cpp  trigger_policy.cpp  uncertainty_metrics.cpp
src/node/: alc_planner_node_main.cpp  planner_node.cpp
test/: db_publisher_node.cpp  test_bnb_selector.cpp  test_candidate_builder.cpp  test_coverage.cpp  test_path_planner.cpp  test_planner_node_params.cpp  test_reward_evaluator.cpp  test_trigger_policy.cpp
